--- a/Views/Clients/CreateClientProfile.cshtml
+++ b/Views/Clients/CreateClientProfile.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="MedicalHistory" class="control-label"></label>
-                <textarea class="form-control" name="mytext" rows="4" cols="20" placeholder="Medical History"></textarea>
+                <input asp-for="MedicalHistory" class="form-control" />
                 <span asp-validation-for="MedicalHistory" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -43,9 +43,13 @@
                 <input asp-for="FitnessGoal" class="form-control" />
                 <span asp-validation-for="FitnessGoal" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div hidden class="form-group">
                 <label asp-for="IdentityUserId" class="control-label"></label>
                 <select asp-for="IdentityUserId" class ="form-control" asp-items="ViewBag.IdentityUserId"></select>
+            </div>
+            <div hidden class="form-group">
+                <label asp-for="PersonalTrainerId" class="control-label"></label>
+                <select asp-for="PersonalTrainerId" class ="form-control" asp-items="ViewBag.PersonalTrainerId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
