--- a/Views/Clients/PersonalTrainersList.cshtml
+++ b/Views/Clients/PersonalTrainersList.cshtml
@@ -7,9 +7,9 @@
 
 <h1>PersonalTrainersList</h1>
 
-@*<p>
+<p>
     <a asp-action="Create">Create New</a>
-</p>*@
+</p>
 <table class="table">
     <thead>
         <tr>
@@ -31,7 +31,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.MedicalProviders)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Lat)
             </th>
             <th>
@@ -39,7 +39,7 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.IdentityUser)
-            </th>
+            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -64,7 +64,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.MedicalProviders)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Lat)
             </td>
             <td>
@@ -72,9 +72,11 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IdentityUser.Id)
-            </td>
+            </td>*@
             <td>
-                <a asp-action="Details" asp-route-id="@item.PersonalTrainerId">Details</a>
+                <a asp-action="Edit" asp-route-id="@item.PersonalTrainerId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.PersonalTrainerId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.PersonalTrainerId">Delete</a>
             </td>
         </tr>
 }
