--- a/Views/Clients/ViewWorkoutSchedule.cshtml
+++ b/Views/Clients/ViewWorkoutSchedule.cshtml
@@ -53,12 +53,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Sunday)
         </dd>
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdentityUser)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdentityUser.Id)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Client)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Client.ClientId)
+        </dd>*@
     </dl>
 </div>
 <div>
