--- a/Views/PersonalTrainers/CreateWorkoutSchedule.cshtml
+++ b/Views/PersonalTrainers/CreateWorkoutSchedule.cshtml
@@ -15,42 +15,46 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Monday" class="control-label"></label>
-                <textarea class="form-control" name="mytext" rows="8" cols="40" placeholder="Monday"></textarea>
+                <input asp-for="Monday" class="form-control" />
                 <span asp-validation-for="Monday" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Tuesday" class="control-label"></label>
-                <textarea class="form-control" name="mytext" rows="8" cols="40" placeholder="Tuesday"></textarea>
+                <input asp-for="Tuesday" class="form-control" />
                 <span asp-validation-for="Tuesday" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Wednsday" class="control-label"></label>
-                <textarea class="form-control" name="mytext" rows="8" cols="40" placeholder="Wednsday"></textarea>
+                <input asp-for="Wednsday" class="form-control" />
                 <span asp-validation-for="Wednsday" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Thursday" class="control-label"></label>
-                <textarea class="form-control" name="mytext" rows="8" cols="40" placeholder="Thursday"></textarea>
+                <input asp-for="Thursday" class="form-control" />
                 <span asp-validation-for="Thursday" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Friday" class="control-label"></label>
-                <textarea class="form-control" name="mytext" rows="8" cols="40" placeholder="Friday"></textarea>
+                <input asp-for="Friday" class="form-control" />
                 <span asp-validation-for="Friday" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Saturday" class="control-label"></label>
-                <textarea class="form-control" name="mytext" rows="8" cols="40" placeholder="Saturday"></textarea>
+                <input asp-for="Saturday" class="form-control" />
                 <span asp-validation-for="Saturday" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Sunday" class="control-label"></label>
-                <textarea class="form-control" name="mytext" rows="8" cols="40" placeholder="Sunday"></textarea>
+                <input asp-for="Sunday" class="form-control" />
                 <span asp-validation-for="Sunday" class="text-danger"></span>
             </div>
             <div hidden class="form-group">
                 <label asp-for="IdentityUserId" class="control-label"></label>
                 <select asp-for="IdentityUserId" class ="form-control" asp-items="ViewBag.IdentityUserId"></select>
+            </div>
+            <div hidden class="form-group">
+                <label asp-for="ClientId" class="control-label"></label>
+                <select asp-for="ClientId" class ="form-control" asp-items="ViewBag.ClientId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
