--- a/Views/PersonalTrainers/ViewClientProfile.cshtml
+++ b/Views/PersonalTrainers/ViewClientProfile.cshtml
@@ -47,12 +47,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FitnessGoal)
         </dd>
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdentityUser)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdentityUser.Id)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PersonalTrainer)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PersonalTrainer.PersonalTrainerId)
+        </dd>*@
     </dl>
 </div>
 <div>
