--- a/Views/ViewDietPlan.cshtml
+++ b/Views/ViewDietPlan.cshtml
@@ -36,6 +36,12 @@
             @Html.DisplayFor(model => model.Fat)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Client)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Client.ClientId)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdentityUser)
         </dt>
         <dd class = "col-sm-10">
